add photo feature

--- a/war/index.html
+++ b/war/index.html
@@ -15,6 +15,8 @@
     <link rel="icon" href="favicon.ico">
     <title>Wedding 9.19 - 我們要結婚了！</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+    <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
     <link rel="stylesheet" href="css/wedding919.css">
 </head>
 
@@ -39,7 +41,13 @@
             <p><a class="btn btn-lg btn-success" target="_blank" href="#" role="button">我要報名！</a></p>
         </section>
         <section id="section_photo" style="display:none">
-            <h3>敬請期待</h3>
+            <h3>婚紗剪影</h3>
+            <div class="row">
+                <div id="links">
+
+                </div>
+            </div>
+            <p>本區不定時更新唷！</p>
         </section>
         <section id="section_place" style="display:none">
             <h3>喜宴時間</h3>
@@ -88,11 +96,46 @@
             <p>Wedding Ceremony &copy; 19 September 2015</p>
         </footer>
     </div>
+    <div id="blueimp-gallery" class="blueimp-gallery">
+        <!-- The container for the modal slides -->
+        <div class="slides"></div>
+        <!-- Controls for the borderless lightbox -->
+        <h3 class="title"></h3>
+        <a class="prev">‹</a>
+        <a class="next">›</a>
+        <a class="close">×</a>
+        <a class="play-pause"></a>
+        <ol class="indicator"></ol>
+        <!-- The modal dialog, which will be used to wrap the lightbox content -->
+        <div class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title"></h4>
+                    </div>
+                    <div class="modal-body next"></div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default pull-left prev">
+                            <i class="glyphicon glyphicon-chevron-left"></i> Previous
+                        </button>
+                        <button type="button" class="btn btn-primary next">
+                            Next
+                            <i class="glyphicon glyphicon-chevron-right"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- /container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/jquery.tinyMap.min.js"></script>
+    <script src="js/photo.js"></script>
     <script src="js/index.js"></script>
+    <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="js/bootstrap-image-gallery.min.js"></script>
 </body>
 
 </html>
