--- a/war/index.html
+++ b/war/index.html
@@ -132,7 +132,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/jquery.tinyMap.min.js"></script>
-    <script src="js/photo.js"></script>
+    <script src="https://dl.dropboxusercontent.com/u/9780124/wedding919.js"></script>
     <script src="js/index.js"></script>
     <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
     <script src="js/bootstrap-image-gallery.min.js"></script>
