--- a/war/index.html
+++ b/war/index.html
@@ -25,7 +25,7 @@
         <div class="header clearfix">
             <nav>
                 <ul class="nav nav-tabs pull-right">
-                    <li role="presentation" class="active"><a href="#">首頁</a></li>
+                    <li role="presentation" id="main_menu" class="active"><a href="#">首頁</a></li>
                     <li role="presentation"><a href="#photo">婚紗剪影</a></li>
                     <li role="presentation"><a href="#place">喜宴資訊</a></li>
                     <li role="presentation"><a href="#about">關於我們</a></li>
