--- a/war/index.html
+++ b/war/index.html
@@ -12,6 +12,10 @@
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://wedding-919.appspot.com" />
     <meta property="og:description" content="感謝 神！我們要結婚了。敬邀您一起參與崇翰與詩雯的結婚喜宴！" />
+    <meta name="twitter:title" content="Wedding 9.19 - 我們要結婚了！">
+    <meta name="twitter:url" content="https://wedding-919.appspot.com">
+    <meta name="twitter:image" content="https://wedding-919.appspot.com/img/snap.png">
+    <meta name="twitter:description" content="感謝 神！我們要結婚了。敬邀您一起參與崇翰與詩雯的結婚喜宴！">
     <link rel="icon" href="favicon.ico">
     <title>Wedding 9.19 - 我們要結婚了！</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -35,14 +39,14 @@
             </nav>
             <h3 class="text-muted">Wedding 9.19</h3>
         </div>
-        <section id="section_main" class="jumbotron">
+        <section id="section_main" class="jumbotron" style="display:none">
             <h5 id="getting-started"></h5>
             <h1>我們要結婚了</h1>
             <div class="avatar">
             </div>
             <h2><span class="male">崇翰</span> <i class="fa fa-diamond heart"></i> <span class="female">詩雯</span></h2>
             <p class="lead">感謝 神！我們終於找到可以依靠一輩子的<span>(長期飯票)</span>室友，衷心邀請您在喜宴當日一同來分享我們的喜悅！</p>
-            <p><a class="btn btn-lg btn-success" target="_blank" href="#" role="button">我要報名！</a></p>
+            <p><a class="btn btn-lg btn-success" target="_blank" href="/apply" role="button">我要報名！</a></p>
         </section>
         <section id="section_photo" style="display:none">
             <div class="pull-right">
