fix image problem. replace icon.

--- a/war/index.html
+++ b/war/index.html
@@ -71,18 +71,18 @@
                 <div class="col-md-4 col-sm-4">
                     <h4><a href="http://www.splendor-tp.com.tw/">京采飯店</a></h4>
                     <address>
-                        <strong>喜宴地址</strong>
+                        <strong><i class="fa fa-cutlery"></i> 喜宴地址</strong>
                         <p>新北市新店區北新路三段207號</p>
                     </address>
                     <address>
-                        <strong>搭乘捷運</strong>
+                        <strong><i class="fa fa-subway"></i> 搭乘捷運</strong>
                         <p>新店綠線大坪林捷運站 4 號出口
                             <br>背對出口右前方馬路斜對面
                             <br>
                         </p>
                     </address>
                     <address>
-                        <strong>開車前往</strong>
+                        <strong><i class="fa fa-car"></i> 開車前往</strong>
                         <p>請由民權路 42 巷進入
                             <br> 前往飯店地下停車場
                             <br> 並請於喜宴結束前領取停車代幣
@@ -110,7 +110,7 @@
                         <img alt="新郎倌" src="../img/male.jpg" class="img-responsive img-circle hidden-sm hidden-xs" />
                         <div class="caption">
                             <h3 class="male">
-                                新郎倌
+                                新郎倌 <i class="fa fa-male"></i>
                             </h3>
                             <p>
                                 討厭麻煩的事情，但是常常很矛盾，這網站的誕生就是如此。好在有個可以管教此人的老大出現，下半輩子應該是可以不要那麼矛盾才對。
@@ -123,7 +123,7 @@
                         <img alt="新娘子" src="../img/female.jpg" class="img-responsive img-circle hidden-sm hidden-xs" />
                         <div class="caption">
                             <h3 class="female">
-                                新娘子
+                                新娘子 <i class="fa fa-female"></i>
                             </h3>
                             <p>
                                 人前非常和藹可親，但其實...嗯，即將步入<span>(戀愛的墳墓)</span>婚姻的殿堂，究～竟未來在家中，會以什麼樣的樣貌相夫教子，請讓我們拭目以待。
