--- a/war/register.html
+++ b/war/register.html
@@ -85,7 +85,7 @@
                     </div>
                     <div class="ss-top-of-page">
                         <div class="ss-form-heading">
-                            <h1 class="ss-form-title" dir="ltr">&#23815;&#32752;&amp;&#35433;&#38639; &#32080;&#23130;&#21916;&#23476;&#21443;&#33287;&#35519;&#26597;</h1>
+                            <h1 class="ss-form-title" dir="ltr"><strong><span class="male">&#23815;&#32752;</span> <i class="fa fa-diamond heart"></i> <span class="female">&#35433;&#38639;</span> &#32080;&#23130;&#21916;&#23476;&#21443;&#33287;&#35519;&#26597;</strong></h1>
                             <div class="ss-form-desc ss-no-ignore-whitespace" dir="ltr">感謝 神！我們終於找到可以依靠一輩子的室友，衷心邀請您在喜宴當日一同來分享我們的喜悅！</div>
                             <div class="ss-required-asterisk" aria-hidden="true"><i class="fa fa-star"></i> 必填</div>
                         </div>
