set the routing config

--- a/war/register.html
+++ b/war/register.html
@@ -238,7 +238,7 @@
                                                 <div class="ss-q-help ss-secondary-text" dir="ltr">請註明留下的資訊，可能是「手機」、「LINE」、「E-Mail」、「ICQ(驚!)」等等。</div>
                                             </label><br>
                                             <i class="fa fa-quote-left"></i>
-                                            <textarea name="entry.144192676" rows="3" cols="30" class="ss-q-long" id="entry_144192676" dir="auto" aria-label="您的聯絡方式 請註明留下的資訊，可能是「手機」、「LINE」、「E-Mail」、「ICQ(驚!)」等等。 " aria-required="true" required=""></textarea>
+                                            <textarea name="entry.144192676" rows="3" class="ss-q-long" id="entry_144192676" dir="auto" aria-label="您的聯絡方式 請註明留下的資訊，可能是「手機」、「LINE」、「E-Mail」、「ICQ(驚!)」等等。 " aria-required="true" required=""></textarea>
                                             <i class="fa fa-quote-right"></i>
                                             <div class="error-message" id="395076372_errorMessage"></div>
                                         </div>
@@ -253,7 +253,7 @@
                                                 <div class="ss-q-help ss-secondary-text" dir="ltr">可以的話請加註郵遞區號</div>
                                             </label><br>
                                             <i class="fa fa-quote-left"></i>
-                                            <textarea name="entry.412759317" rows="3" cols="30" class="ss-q-long" id="entry_412759317" dir="auto" aria-label="您的喜帖收件地址 可以的話請加註郵遞區號 "></textarea>
+                                            <textarea name="entry.412759317" rows="3" class="ss-q-long" id="entry_412759317" dir="auto" aria-label="您的喜帖收件地址 可以的話請加註郵遞區號 "></textarea>
                                             <i class="fa fa-quote-right"></i>
                                             <div class="error-message" id="1025290483_errorMessage"></div>
                                         </div>
@@ -268,7 +268,7 @@
                                                 <div class="ss-q-help ss-secondary-text" dir="ltr">有什麼特別的需求？想跟誰安排在同一桌？我們盡量安排看看！</div>
                                             </label><br>
                                             <i class="fa fa-quote-left"></i>
-                                            <textarea name="entry.227930004" rows="3" cols="30" class="ss-q-long" id="entry_227930004" dir="auto" aria-label="其他需求 有什麼特別的需求？想跟誰安排在同一桌？我們盡量安排看看！ "></textarea>
+                                            <textarea name="entry.227930004" rows="3" class="ss-q-long" id="entry_227930004" dir="auto" aria-label="其他需求 有什麼特別的需求？想跟誰安排在同一桌？我們盡量安排看看！ "></textarea>
                                             <i class="fa fa-quote-right"></i>
                                             <div class="error-message" id="465947977_errorMessage"></div>
                                         </div>
@@ -283,7 +283,7 @@
                                                 <div class="ss-q-help ss-secondary-text" dir="ltr">有什麼想對這對新人說的嗎？請在此留言唷！</div>
                                             </label><br>
                                             <i class="fa fa-quote-left"></i>
-                                            <textarea name="entry.729132167" rows="3" cols="30" class="ss-q-long" id="entry_729132167" dir="auto" aria-label="給崇翰與詩雯的祝福 有什麼想對這對新人說的嗎？請在此留言唷！ "></textarea>
+                                            <textarea name="entry.729132167" rows="3" class="ss-q-long" id="entry_729132167" dir="auto" aria-label="給崇翰與詩雯的祝福 有什麼想對這對新人說的嗎？請在此留言唷！ "></textarea>
                                             <i class="fa fa-quote-right"></i>
                                             <div class="error-message" id="818531653_errorMessage"></div>
                                         </div>
