--- a/war/index.html
+++ b/war/index.html
@@ -63,7 +63,8 @@
             <h3>喜宴時間</h3>
             <div class="row">
                 <div class="col-md-12 col-sm-12 lunch-time">
-                    <p>2015.09.19(六) 12:30 京采飯店 一樓 王黃府喜宴 準時開始</p>
+                    <p>2015.09.19(六) 12:00 京采飯店 一樓 王黃府喜宴 準時入場</p>
+                    <p>(當日 09:00 於教會有結婚禮拜儀式，歡迎蒞臨觀禮)</p>
                 </div>
             </div>
             <h3>飯店資訊</h3>
