--- a/war/error.html
+++ b/war/error.html
@@ -28,7 +28,7 @@
         <div class="header clearfix">
             <nav>
                 <ul class="nav nav-tabs pull-right">
-                    <li role="presentation" id="main_menu" class="active"><a href="/#">首頁</a></li>
+                    <li role="presentation" id="main_menu"><a href="/#">首頁</a></li>
                     <li role="presentation"><a href="/#photo">婚紗剪影</a></li>
                     <li role="presentation"><a href="/#place">喜宴資訊</a></li>
                     <li role="presentation"><a href="/#about">關於我們</a></li>
@@ -48,7 +48,6 @@
     <!-- /container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/index.js"></script>
 </body>
 
 </html>
