update css and wording

--- a/war/index.html
+++ b/war/index.html
@@ -73,7 +73,7 @@
                 <div id="links">
                 </div>
             </div>
-            <p>本區不定時更新唷！</p>
+            <p>婚禮前本區會不定期更新唷！</p>
         </section>
         <section id="section_place" style="display:none">
             <h3>喜宴時間</h3>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row cheers">
                 <div class="col-sm-12">
                     <h3>衷心期盼各位的到來</h3>
                 </div>
