--- a/war/register.html
+++ b/war/register.html
@@ -336,7 +336,7 @@
         <!-- +++++++++++++++++++++++++++++++++++++++++++++ -->
         <div class="row">
             <div class="col-sm-12">
-                    <img src="../img/banner.jpg" alt="謝謝各位" class="img-responsive img-thumbnail">
+                    <img src="../img/banner3.jpg" alt="謝謝各位" class="img-responsive img-thumbnail">
             </div>
         </div>
         <footer class="footer">
