--- a/war/index.html
+++ b/war/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="感謝 神！我們要結婚了。敬邀您一起參與崇翰與詩雯的結婚喜宴！">
     <meta name="author" content="Chonhan Wang">
     <meta property="og:title" content="Wedding 9.19 - 我們要結婚了！" />
-    <meta property="og:image" content="https://wedding-919.appspot.com/img/snap.png" />
+    <meta property="og:image" content="http://wedding-919.appspot.com/img/snap.png" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://wedding-919.appspot.com" />
     <meta property="og:description" content="感謝 神！我們要結婚了。敬邀您一起參與崇翰與詩雯的結婚喜宴！" />
