add ics file download

--- a/war/index.html
+++ b/war/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="favicon.ico">
     <title>Wedding 9.19 - 我們要結婚了！</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://gitcdn.github.io/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css">
     <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -79,7 +79,7 @@
             <h3>喜宴時間</h3>
             <div class="row">
                 <div class="col-md-12 col-sm-12 lunch-time">
-                    <p>2015.09.19(六) 12:00 京采飯店 一樓 王黃府喜宴 準時入場</p>
+                    <p>2015.09.19(六) 12:00 京采飯店 一樓 王黃府喜宴 準時入場 (<a href="https://dl.dropboxusercontent.com/u/9780124/wedding919/wedding919.ics">.ics</a>)</p>
                     <p>(當日 09:00 於教會有結婚禮拜儀式，歡迎蒞臨觀禮)</p>
                 </div>
             </div>
