update e-mail address

--- a/war/register.html
+++ b/war/register.html
@@ -266,7 +266,7 @@
                                             <label class="ss-q-item-label" for="entry_412759317">
                                                 <div class="ss-q-title"><i class="fa fa-hand-o-right"></i> 您的喜帖收件地址
                                                 </div>
-                                                <div class="ss-q-help ss-secondary-text" dir="ltr">可以的話請加註郵遞區號</div>
+                                                <div class="ss-q-help ss-secondary-text" dir="ltr">可以的話請加註郵遞區號(要電子喜帖的人請填 E-Mail)</div>
                                             </label><br>
                                             <i class="fa fa-quote-left"></i>
                                             <textarea name="entry.412759317" rows="3" class="ss-q-long" id="entry_412759317" dir="auto" aria-label="您的喜帖收件地址 可以的話請加註郵遞區號 "></textarea>
