update wording and the time interval of background image.

--- a/war/index.html
+++ b/war/index.html
@@ -73,7 +73,7 @@
                 <div id="links">
                 </div>
             </div>
-            <p>婚禮前本區會不定期更新唷！</p>
+            <p>婚禮前本區每日更新！</p>
         </section>
         <section id="section_place" style="display:none">
             <h3>喜宴時間</h3>
