update event info

--- a/war/index.html
+++ b/war/index.html
@@ -79,7 +79,10 @@
             <h3>喜宴時間</h3>
             <div class="row">
                 <div class="col-md-12 col-sm-12 lunch-time">
-                    <p>2015.09.19(六) 12:00 京采飯店 一樓 王黃府喜宴 準時入場 (<a href="https://dl.dropboxusercontent.com/u/9780124/wedding919/wedding919.ics">.ics</a>)</p>
+                    <p>2015.09.19(六) 12:00 京采飯店 一樓 王黃府喜宴 準時入場
+                    (<a href="https://dl.dropboxusercontent.com/u/9780124/wedding919/wedding919.ics" target="_blank">.ics</a>)
+                    (<a href="https://www.facebook.com/events/1705862812980078/" target="_blank">Facebook 邀請</a>)
+                    </p>
                     <p>(當日 09:00 於教會有結婚禮拜儀式，歡迎蒞臨觀禮)</p>
                 </div>
             </div>
