move images to another place

--- a/war/index.html
+++ b/war/index.html
@@ -73,15 +73,15 @@
                 <div id="links">
                 </div>
             </div>
-            <p>婚禮前本區每日更新！</p>
+            <p>婚禮前不定期更新！</p>
         </section>
         <section id="section_place" style="display:none">
             <h3>喜宴時間</h3>
             <div class="row">
                 <div class="col-md-12 col-sm-12 lunch-time">
                     <p>2015.09.19(六) 12:00 京采飯店 一樓 王黃府喜宴 準時入場
-                    (<a href="https://dl.dropboxusercontent.com/u/9780124/wedding919/wedding919.ics" target="_blank">.ics</a>)
-                    (<a href="https://www.facebook.com/events/1705862812980078/" target="_blank">Facebook 邀請</a>)
+                    (<a href="https://dl.dropboxusercontent.com/u/9780124/wedding919/wedding919.ics" target="_blank" title="行事曆 .ics 檔下載"><i class="fa fa-calendar"></i> .ics 檔</a>)
+                    (<a href="https://www.facebook.com/events/1705862812980078/" target="_blank" title="Facebook活動連結"><i class="fa fa-facebook-official"></i> 活動連結</a>)
                     </p>
                     <p>(當日 09:00 於教會有結婚禮拜儀式，歡迎蒞臨觀禮)</p>
                 </div>
@@ -146,7 +146,7 @@
                                 新娘子 <i class="fa fa-female"></i>
                             </h3>
                             <p>
-                                人前非常和藹可親，但其實...嗯，即將步入<span>(戀愛的墳墓)</span>婚姻的殿堂，究～竟未來在家中，會以什麼樣的樣貌相夫教子，請讓我們拭目以待。
+                                人前非常和藹可親，但其實...嗯，即將步入<span>(戀愛的完美句點)</span>婚姻的殿堂，究～竟未來在家中，會以什麼樣的樣貌相夫教子，請讓我們拭目以待。
                             </p>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
     <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
     <script src="js/jquery.tinyMap.min.js"></script>
     <script src="js/jquery.countdown.min.js"></script>
-    <script src="https://dl.dropboxusercontent.com/u/9780124/wedding919/wedding919.js"></script>
+    <script src="js/wedding919.js"></script>
     <script src="js/index.js"></script>
     <script src="//blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
     <script src="js/bootstrap-image-gallery.min.js"></script>
